--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                     在 macOS 任意界面，通过快捷键唤醒面板，<br>
                     用字母快速定位并跳转到目标窗口
                 </p>
+                <div class="hero-actions">
+                    <a class="hero-button" href="https://github.com/immotal/gowindow/releases" target="_blank" rel="noopener noreferrer">
+                        <span class="code-symbol">$</span> 下载 gowindow
+                    </a>
+                    <span class="hero-meta">在 GitHub Releases 获取最新版本</span>
+                </div>
                 <div class="hero-demo">
                     <div class="demo-panel">
                         <div class="demo-label">快捷键唤醒面板</div>
